Project Scbank {
  database_type: 'PostgreSQL'
  Note: '''
    # Scbank Database
    **markdown content here**
  '''
}
Table users {
  username varchar [pk]
  email varchar [unique, not null]
  full_name varchar [not null]
  hashed_password varchar [not null]
  created_at timestamptz [not null,default: `now()`]
  password_changed_at timestamptz [not null,default: '0001-01-01 00:00:00Z']
}
Table account {
  id bigserial [pk]
  owner varchar [not null, ref: > users.username]
  balance bigint [not null]
  currency varchar [not null]
  created_at timestamptz [not null, default: `now()`]
  Indexes {
    owner
    (owner,currency) [unique]
  }
}
Table entries {
  id bigserial [pk]
  account_id bigint [not null, ref: > account.id]
  amount bigint [not null, note: 'it can be negative or positive']
  created_at timestamptz [not null, default: `now()`]
  Indexes {
    account_id
  }
}
Table transfers {
  id bigserial [pk]
  from_account_id bigint [not null, ref: > account.id]
  to_account_id bigint [not null, ref: > account.id]
  amount bigint [not null]
  created_at timestamptz [not null, default: `now()`]
  Indexes {
    from_account_id
    to_account_id
    (from_account_id, to_account_id)
  }
}